# esp32

./: .gitignore  CMakeLists.txt  Makefile  debug.sh  partitions.csv  sdkconfig  sdkconfig.old
components/: .gitignore
components/lvgl_touch_calibration/: CMakeLists.txt  component.mk  esp_nvs_tc.c  lv_tc.c  (+2 more)
main/: CMakeLists.txt  LGFX.hpp  app.c  app.h  blufi_example_main.c  main.c  main.cpp
main/app/: app.c  app.h  routers.c  theme.c  theme.h
main/bluefi/: blufi_example.h  blufi_server.c
main/blufi/: blufi.h  blufi_example.h  blufi_init.c  blufi_security.c  blufi_server.c
main/mqtt/: mqtt.c  mqtt.h
main/pages/: calibration.c  calibration.h  weather.c  weather.h
main/pages/3d_printer/: ui.c  ui.h  ui_helpers.c  ui_helpers.h  ui_img_arrow_down_png.c  ui_img_arrow_left_png.c  ui_img_arrow_right_png.c  ui_img_arrow_up_png.c  ui_img_btn_main_off_png.c  ui_img_btn_main_on_png.c  ui_img_btn_move_png.c  ui_img_btn_pad_bottom_png.c  ui_img_btn_pad_top_png.c  ui_img_btn_print_down_png.c  ui_img_btn_print_png.c  ui_img_btn_print_top_off_png.c  ui_img_btn_setting_png.c  ui_img_btn_z_botton_png.c  ui_img_btn_z_top_png.c  ui_img_icn_bed_png.c  ui_img_icn_head_png.c  ui_img_icn_pause_png.c  ui_img_icn_pc_png.c  ui_img_icn_stop_png.c  ui_img_icn_time_1_png.c  ui_img_icn_time_2_png.c  ui_img_icn_usb_png.c  ui_img_icn_wifi_png.c  ui_img_print_view_bg_png.c  ui_img_print_view_front_png.c  ui_img_roller_bg_png.c
main/pages/box/: home.c
main/pages/box/inc/: ui.h
main/pages/gadget/: ui.c  ui.h
main/pages/temperature/: ui.c  ui.h  ui_events.c  ui_helpers.c  ui_helpers.h
